--- a/kafka-bare-quickstart/src/main/resources/application.properties
+++ b/kafka-bare-quickstart/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 # All the `kafka.` properties are used as Kafka configuration
-kafka.bootstrap.servers=localhost:9092
+kafka.bootstrap.servers=my-cluster-kafka-bootstrap.kafka:9092 
 kafka.group.id=my-group
+
+# Set the Navite defaults
+quarkus.native.container-build=true
+# quarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-mandrel:21.0-java11
+quarkus.native.container-runtime=podman
+quarkus.container-image.build=true
+# set the Kubernetes namespace which will be used to run the application
+quarkus.container-image.group=knative-kafka-hello-quickstart
+# set the container image registry - this is the standard URL used to refer to the internal OpenShift registry
+quarkus.container-image.registry=image-registry.openshift-image-registry.svc:5000
+quarkus.kubernetes.deployment-target=knative
