configure 3 component to use kafka, try to use eventing

--- a/kafka-quickstart/gen/src/main/resources/application.properties
+++ b/kafka-quickstart/gen/src/main/resources/application.properties
@@ -1,17 +1,10 @@
 # Configure the Kafka sink (we write to it)
 kafka.bootstrap.servers=my-cluster-kafka-bootstrap.kafka:9092 
 
-# Configure the Kafka source (we read from it)
-mp.messaging.incoming.prices.connector=smallrye-kafka
-mp.messaging.incoming.prices.health-readiness-enabled=false
-mp.messaging.incoming.prices.topic=prices
-mp.messaging.incoming.prices.value.deserializer=org.apache.kafka.common.serialization.IntegerDeserializer
-
 # Configure the Kafka sink (we write to it)
-mp.messaging.outgoing.my-data-stream.connector=smallrye-kafka
-mp.messaging.outgoing.my-data-stream.topic=my-data-stream
-mp.messaging.outgoing.my-data-stream.value.serializer=org.apache.kafka.common.serialization.DoubleSerializer
-
+mp.messaging.outgoing.generated-price.connector=smallrye-kafka
+mp.messaging.outgoing.generated-price.topic=prices
+mp.messaging.outgoing.generated-price.value.serializer=org.apache.kafka.common.serialization.IntegerSerializer
 
 # Set the Navite defaults
 quarkus.native.container-build=true
