--- a/kafka-quickstart/sub/src/main/resources/application.properties
+++ b/kafka-quickstart/sub/src/main/resources/application.properties
@@ -1,14 +1,11 @@
 # Configure the Kafka sink (we write to it)
 kafka.bootstrap.servers=my-cluster-kafka-bootstrap.kafka:9092 
-mp.messaging.outgoing.generated-price.connector=smallrye-kafka
-mp.messaging.outgoing.generated-price.topic=prices
-mp.messaging.outgoing.generated-price.value.serializer=org.apache.kafka.common.serialization.IntegerSerializer
 
 # Configure the Kafka source (we read from it)
-mp.messaging.incoming.prices.connector=smallrye-kafka
-mp.messaging.incoming.prices.health-readiness-enabled=false
-mp.messaging.incoming.prices.topic=prices
-mp.messaging.incoming.prices.value.deserializer=org.apache.kafka.common.serialization.IntegerDeserializer
+mp.messaging.incoming.my-data-stream.connector=smallrye-kafka
+mp.messaging.incoming.my-data-stream.health-readiness-enabled=false
+mp.messaging.incoming.my-data-stream.value.deserializer=org.apache.kafka.common.serialization.DoubleDeserializer
+
 
 # Set the Navite defaults
 quarkus.native.container-build=true
