--- a/kafka-quickstart/gen/src/main/resources/application.properties
+++ b/kafka-quickstart/gen/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-# Configure the Kafka sink (we write to it)
-kafka.bootstrap.servers=my-cluster-kafka-bootstrap.kafka:9092 
+kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVERS} 
+# kafka.bootstrap.servers=my-cluster-kafka-bootstrap.kafka:9092 
 
 # Configure the Kafka sink (we write to it)
 mp.messaging.outgoing.generated-price.connector=smallrye-kafka
-mp.messaging.outgoing.generated-price.topic=prices
+# mp.messaging.outgoing.generated-price.topic=prices
 mp.messaging.outgoing.generated-price.value.serializer=org.apache.kafka.common.serialization.IntegerSerializer
 
 # Set the Navite defaults
