--- a/kafka-quickstart/sub/src/main/resources/application.properties
+++ b/kafka-quickstart/sub/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Configure the Kafka sink (we write to it)
-kafka.bootstrap.servers=my-cluster-kafka-bootstrap.kafka:9092 
+kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVERS} 
+# kafka.bootstrap.servers=my-cluster-kafka-bootstrap.kafka:9092 
 
 # Configure the Kafka source (we read from it)
 mp.messaging.incoming.my-data-stream.connector=smallrye-kafka
