--- a/kafka-quickstart/config/kafka-topic.yaml
+++ b/kafka-quickstart/config/kafka-topic.yaml
@@ -1,7 +1,7 @@
 apiVersion: kafka.strimzi.io/v1beta1
 kind: KafkaTopic
 metadata:
-  name: prices
+  name: generated-price
   namespace: knative-kafka-quarkus-example
   labels:
     strimzi.io/cluster: my-cluster
