--- a/kafka-quickstart/config/knative-eventing.yaml
+++ b/kafka-quickstart/config/knative-eventing.yaml
@@ -10,3 +10,34 @@ spec:
     kind: ConfigMap
     name: kafka-broker-config
     namespace: knative-eventing
+---
+apiVersion: sources.knative.dev/v1beta1
+kind: KafkaSource
+metadata:
+  name: kafka-source-prices-broker-source
+  namespace: knative-kafka-quarkus-example
+spec:
+  bootstrapServers:
+  - my-cluster-kafka-bootstrap.kafka:9092
+  topics:
+  - my-data-stream
+  sink:
+    ref:
+      apiVersion: eventing.knative.dev/v1
+      kind: Broker
+      name: default
+
+---
+apiVersion: eventing.knative.dev/v1
+kind: Trigger
+metadata:
+  name: prices-sub-trigger
+  namespace: knative-kafka-quarkus-example
+spec:
+  broker: default
+  subscriber:
+    ref:
+      apiVersion: serving.knative.dev/v1
+      kind: Service
+      name: prices-sub
+    uri: /prices
