--- a/kafka-quickstart/sub/src/main/resources/application.properties
+++ b/kafka-quickstart/sub/src/main/resources/application.properties
@@ -1,12 +1,21 @@
 # Configure the Kafka sink (we write to it)
-kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVERS} 
-# kafka.bootstrap.servers=my-cluster-kafka-bootstrap.kafka:9092 
+# kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVERS} 
+kafka.bootstrap.servers=my-cluster-kafka-bootstrap.kafka:9092 
 
 # Configure the Kafka source (we read from it)
 mp.messaging.incoming.my-data-stream.connector=smallrye-kafka
 mp.messaging.incoming.my-data-stream.health-readiness-enabled=false
+# mp.messaging.incoming.my-data-stream.topic=data
 mp.messaging.incoming.my-data-stream.value.deserializer=org.apache.kafka.common.serialization.DoubleDeserializer
 
+mp.messaging.outgoing.prices.connector=smallrye-kafka
+# mp.messaging.outgoing.prices.cloud-events-mode=structured
+# mp.messaging.outgoing.prices.cloud-events-data-content-type=plain/text
+# mp.messaging.outgoing.prices.cloud-events-type=generated
+# mp.messaging.outgoing.prices.cloud-events-source=http://redhat.com
+# mp.messaging.outgoing.prices.cloud-events-subject=generated-message
+# mp.messaging.outgoing.prices.topic=prices
+mp.messaging.outgoing.prices.value.serializer=org.apache.kafka.common.serialization.DoubleSerializer
 
 # Set the Navite defaults
 quarkus.native.container-build=true
