--- a/kafka-quickstart/pub/src/main/resources/application.properties
+++ b/kafka-quickstart/pub/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVERS} 
-# kafka.bootstrap.servers=my-cluster-kafka-bootstrap.kafka:9092 
+# kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVERS} 
+kafka.bootstrap.servers=my-cluster-kafka-bootstrap.kafka:9092 
 
 # Configure the Kafka source (we read from it)
 mp.messaging.incoming.generated-price.connector=smallrye-kafka
@@ -9,7 +9,12 @@ mp.messaging.incoming.generated-price.value.deserializer=org.apache.kafka.common
 
 # Configure the Kafka sink (we write to it)
 mp.messaging.outgoing.my-data-stream.connector=smallrye-kafka
-# mp.messaging.outgoing.my-data-stream.topic=my-data-stream
+# mp.messaging.outgoing.my-data-stream.cloud-events-mode=structured
+# mp.messaging.outgoing.my-data-stream.cloud-events-data-content-type=plain/text
+# mp.messaging.outgoing.my-data-stream.cloud-events-type=generated
+# mp.messaging.outgoing.my-data-stream.cloud-events-source=http://redhat.com
+# mp.messaging.outgoing.my-data-stream.cloud-events-subject=generated-message
+# mp.messaging.outgoing.my-data-stream.topic=data
 mp.messaging.outgoing.my-data-stream.value.serializer=org.apache.kafka.common.serialization.DoubleSerializer
 
 
